Fixed previous commit making buttons overlap. oops!

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -248,6 +248,7 @@ body {
 	z-index: 9999;
 }
 #muteButton {
+	top: 5%;
 	border-color: olivedrab;
 }
 #muteButton:hover,
